[package]
name = "tree-sitter-vessel"
description = "Programming language targeting Juno: New Origins"
version = "0.1.0"
authors = ["Ryder Retzlaff <ryder@retzlaff.family>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "vessel"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/zshzebra/tree-sitter-vessel"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.8"
